i dont feel like fixing dark mode rn

--- a/index.css
+++ b/index.css
@@ -2,10 +2,25 @@
 	font-family: 'AgaveNerdFontMono';
 	src: url('fonts/AgaveNerdFontMono-Regular.ttf') format("truetype");
 }
+:root {
+	--text: #000;
+	--bg: #fff;
+}
 
 body {
-	margin: 0px;
+	/* maybe change in the future */
+	margin: 0;
+	background-color: var(--bg);
+	color: var(--text);
 }
+
+@media (prefers-color-scheme: dark) {
+	:root {
+		--text: #fff;
+		--bg: #000;
+	}
+}
+
 
 .navbar {
 	background-color: #333;
@@ -24,13 +39,24 @@ body {
 .navbar li {
 	display: inline-block;
 }
+.navbar li:hover {
+	background-color: #2e383f;
+}
 
-.navbar li a {
+/* hidden */
+.navbar-hbutton {
 	color: white;
 	display: block;
 	padding: 10px 20px;
 	text-decoration: none;
 }
+
+/* no text button */
+.navbar-ntbutton {
+	position: absolute;
+	padding: 18px 20px;
+}
+
 
 /* Style the dropdown menu */
 .navbar ul ul {
@@ -49,7 +75,7 @@ body {
 
 /* Change the background color of dropdown links on hover */
 .navbar ul ul li a:hover {
-	background-color: #555;
+	background-color: #2e383f;
 }
 
 
@@ -60,9 +86,28 @@ body {
 	padding: 0;
 	font: inherit;
 	cursor: pointer;
-	outline: inherit;
+	outline: inherit; 
 }
 
+.stacked {
+	position: absolute;
+}
+
+.middle-aligned {
+	display: inline-block;
+	vertical-align: middle;
+}
+
+.right-aligned {
+	position: absolute;
+	right: 0;
+}
+
+
+#bg-btn {
+	top: 5px;
+	right: 8px;
+}
 #bg-svg {
 	vertical-align: middle;
 	display: inline-block;
